Use Mongodb as database

--- a/src/Backend/appsettings.Development.json
+++ b/src/Backend/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "User ID=postgres;Password=password;Server=127.0.0.1;Port=5432;Database=itlab_salary_develop;Integrated Security=true;"
+    "Postgres": "User ID=postgres;Password=password;Server=127.0.0.1;Port=5432;Database=itlab_salary_develop;Integrated Security=true;",
+    "MongoDb": "mongodb://localhost:27017/itlabsalarydevelop2"
   }
 }
