--- a/tests/e2e/TestMace/Project/First tests/Get all event salary/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/Get all event salary/index.yml
@@ -6,7 +6,7 @@ assignVariables: []
 requestData:
   request:
     method: GET
-    url: '${$env.basePath}/api/eventsalary/'
+    url: '${$env.basePath}/salary/event/'
   headers: []
   disabledInheritedHeaders: []
   params: []
