--- a/tests/e2e/TestMace/Project/First tests/create event/Create new salary event/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/create event/Create new salary event/index.yml
@@ -6,7 +6,7 @@ assignVariables: []
 requestData:
   request:
     method: POST
-    url: '${$env.basePath}/api/eventsalary'
+    url: '${$env.basePath}/salary/event'
   headers: []
   disabledInheritedHeaders: []
   params: []
