--- a/tests/e2e/TestMace/Project/First tests/create event/Remember events count/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/create event/Remember events count/index.yml
@@ -11,7 +11,7 @@ assignVariables:
 requestData:
   request:
     method: GET
-    url: '${$env.basePath}/api/eventsalary/'
+    url: '${$env.basePath}/salary/event/'
   headers: []
   disabledInheritedHeaders: []
   params: []
