Setup add shift salary action Fill swagger document

--- a/src/Backend/Backend.csproj
+++ b/src/Backend/Backend.csproj
@@ -25,4 +25,8 @@
   </ItemGroup>
 
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
 </Project>
