Fill tests for new logic

--- a/tests/e2e/TestMace/Project/First tests/create event/Create new salary event/Assertions.yml
+++ b/tests/e2e/TestMace/Project/First tests/create event/Create new salary event/Assertions.yml
@@ -17,4 +17,9 @@ assertions:
     actualValue: '${$response.body.eventId}'
     operator: equal
     expectedValue: '${newEventSalaryEventId}'
+  - disabled: false
+    type: compare
+    actualValue: '${$response.code}'
+    operator: equal
+    expectedValue: '201'
 name: Assertions
