--- a/tests/e2e/TestMace/Project/First tests/create event/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/create event/index.yml
@@ -3,10 +3,10 @@ children:
   - Create new salary event
   - Remember events count again
   - Test count changed
+  - Create new salary event Copy
 variables:
   newEventSalaryCount: '155'
   newEventSalaryDescription: Test descripton
-  newEventSalaryEventId: 431fcff2-bec2-452e-a68c-17bfcd087f65
 type: Folder
 authData:
   type: inherit
