--- a/tests/e2e/TestMace/Project/First tests/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/index.yml
@@ -1,7 +1,9 @@
 children:
   - Get all event salary
   - create event
-variables: {}
+  - shift adding
+variables:
+  newEventSalaryEventId: 431fcff2-bec2-452e-a68c-17bfcd087f65
 type: Folder
 authData:
   type: inherit
