--- a/tests/e2e/TestMace/Project/First tests/shift adding/Check is no shifts in event salary/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/shift adding/Check is no shifts in event salary/index.yml
@@ -5,18 +5,14 @@ type: RequestStep
 assignVariables: []
 requestData:
   request:
-    method: POST
+    method: GET
     url: '${$env.basePath}/salary/event/${newEventSalaryEventId}'
   headers: []
   disabledInheritedHeaders: []
   params: []
   body:
     type: Json
-    jsonBody: |-
-      {
-        "count":${newEventSalaryCount},
-        "description":"${newEventSalaryDescription}"
-      }
+    jsonBody: ''
     xmlBody: ''
     textBody: ''
     formData: []
@@ -25,4 +21,4 @@ requestData:
   strictSSL: Inherit
 authData:
   type: inherit
-name: Create new salary event
+name: Check is no shifts in event salary
