--- a/tests/e2e/TestMace/Project/First tests/create event/Cant create event salary with same id/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/create event/Cant create event salary with same id/index.yml
@@ -1,4 +1,4 @@
-children: 
+children:
   - Assertions
 variables: {}
 type: RequestStep
@@ -25,4 +25,4 @@ requestData:
   strictSSL: Inherit
 authData:
   type: inherit
-name: Create new salary event Copy
+name: Cant create event salary with same id
