--- a/tests/e2e/TestMace/Project/First tests/shift adding/Cant add new shift salary with same id/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/shift adding/Cant add new shift salary with same id/index.yml
@@ -5,7 +5,7 @@ type: RequestStep
 assignVariables: []
 requestData:
   request:
-    method: PUT
+    method: POST
     url: '${$env.basePath}/salary/event/${newEventSalaryEventId}/${newShiftId}'
   headers: []
   disabledInheritedHeaders: []
