--- a/tests/e2e/TestMace/Project/First tests/Start with empry event salary/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/Start with empry event salary/index.yml
@@ -5,14 +5,14 @@ type: RequestStep
 assignVariables: []
 requestData:
   request:
-    method: POST
-    url: '${$env.basePath}/salary/event/${newEventSalaryEventId}/${newShiftId}'
+    method: GET
+    url: '${$env.basePath}/salary/event/'
   headers: []
   disabledInheritedHeaders: []
   params: []
   body:
     type: Json
-    jsonBody: "{\r\n  \"count\": ${newShiftCount},\r\n  \"description\": \"${newShiftDescription}\"\r\n}"
+    jsonBody: ''
     xmlBody: ''
     textBody: ''
     formData: []
@@ -21,4 +21,4 @@ requestData:
   strictSSL: Inherit
 authData:
   type: inherit
-name: Add new shift to event salary
+name: Start with empry event salary
