--- a/tests/e2e/TestMace/Project/First tests/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/index.yml
@@ -1,9 +1,11 @@
 children:
-  - Get all event salary
+  - Start with empry event salary
   - create event
   - shift adding
+  - shift editing
 variables:
   newEventSalaryEventId: 431fcff2-bec2-452e-a68c-17bfcd087f65
+  newShiftId: 3fa85f64-5717-4562-b3fc-2c963f66afa6
 type: Folder
 authData:
   type: inherit
