--- a/tests/e2e/TestMace/Project/First tests/shift editing/Edit shift salary on incorrect event id/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/shift editing/Edit shift salary on incorrect event id/index.yml
@@ -5,14 +5,15 @@ type: RequestStep
 assignVariables: []
 requestData:
   request:
-    method: GET
-    url: '${$env.basePath}/salary/event/'
+    method: PUT
+    url: >-
+      ${$env.basePath}/salary/event/431fcff2-bec2-452e-a68c-17bfcd087f64/${newShiftId}
   headers: []
   disabledInheritedHeaders: []
   params: []
   body:
     type: Json
-    jsonBody: ''
+    jsonBody: "{\r\n  \"count\": ${editShiftCount},\r\n  \"description\": \"${editShiftDescription}\"\r\n}"
     xmlBody: ''
     textBody: ''
     formData: []
@@ -21,4 +22,4 @@ requestData:
   strictSSL: Inherit
 authData:
   type: inherit
-name: Get all event salary
+name: Edit shift salary on incorrect event id
