--- a/tests/e2e/TestMace/Project/First tests/shift editing/Edit shift salary/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/shift editing/Edit shift salary/index.yml
@@ -5,14 +5,14 @@ type: RequestStep
 assignVariables: []
 requestData:
   request:
-    method: POST
+    method: PUT
     url: '${$env.basePath}/salary/event/${newEventSalaryEventId}/${newShiftId}'
   headers: []
   disabledInheritedHeaders: []
   params: []
   body:
     type: Json
-    jsonBody: "{\r\n  \"count\": ${newShiftCount},\r\n  \"description\": \"${newShiftDescription}\"\r\n}"
+    jsonBody: "{\r\n  \"count\": ${editShiftCount},\r\n  \"description\": \"${editShiftDescription}\"\r\n}"
     xmlBody: ''
     textBody: ''
     formData: []
@@ -21,4 +21,4 @@ requestData:
   strictSSL: Inherit
 authData:
   type: inherit
-name: Add new shift to event salary
+name: Edit shift salary
