Update returning policy, correct history saving

--- a/tests/e2e/TestMace/Project/First tests/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/index.yml
@@ -1,6 +1,7 @@
 children:
   - Start with empry event salary
   - create event
+  - edit event info
   - shift adding
   - shift editing
 variables:
