--- a/tests/e2e/TestMace/Project/First tests/shift adding/Check is no shifts in event salary/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/shift adding/Check is no shifts in event salary/index.yml
@@ -6,7 +6,7 @@ assignVariables: []
 requestData:
   request:
     method: GET
-    url: '${$env.basePath}/salary/event/${newEventSalaryEventId}'
+    url: '${$env.basePath}/salary/v1/event/${newEventSalaryEventId}'
   headers: []
   disabledInheritedHeaders: []
   params: []
