--- a/tests/e2e/TestMace/Project/First tests/shift editing/Edit shift salary on incorrect shift id/index.yml
+++ b/tests/e2e/TestMace/Project/First tests/shift editing/Edit shift salary on incorrect shift id/index.yml
@@ -7,7 +7,7 @@ requestData:
   request:
     method: PUT
     url: >-
-      ${$env.basePath}/salary/event/${newEventSalaryEventId}/431fcff2-bec2-452e-a68c-17bfcd087f66
+      ${$env.basePath}/salary/v1/event/${newEventSalaryEventId}/431fcff2-bec2-452e-a68c-17bfcd087f66
   headers: []
   disabledInheritedHeaders: []
   params: []
