Move tests to v1.0 folder

--- a/tests/e2e/TestMace/Project/v1.0/create event/Remember events count/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/create event/Remember events count/index.yml
@@ -5,7 +5,7 @@ type: RequestStep
 assignVariables:
   - assign:
       type: reference
-      refNodePath: Project/First tests/create event
+      refNodePath: Project/v1.0/create event
     path: body.length
     variable: salaryCount
 requestData:
