Change models in database and public api, done places

--- a/tests/e2e/TestMace/Project/v1.0/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/index.yml
@@ -5,6 +5,7 @@ children:
   - shift adding
   - shift editing
   - place adding
+  - place editing
 variables:
   newEventSalaryEventId: 431fcff2-bec2-452e-a68c-17bfcd087f65
   newShiftId: 3fa85f64-5717-4562-b3fc-2c963f66afa6
