--- a/tests/e2e/TestMace/Project/v1.0/shift adding/Add new shift to event salary/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/shift adding/Add new shift to event salary/index.yml
@@ -6,7 +6,8 @@ assignVariables: []
 requestData:
   request:
     method: POST
-    url: '${$env.basePath}/salary/v1/event/${newEventSalaryEventId}/${newShiftId}'
+    url: >-
+      ${$env.basePath}/salary/v1/event/${newEventSalaryEventId}/shift/${newShiftId}
   headers: []
   disabledInheritedHeaders: []
   params: []
