--- a/tests/e2e/TestMace/Project/v1.0/place adding/Cant add place salary with same id/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/place adding/Cant add place salary with same id/index.yml
@@ -7,7 +7,7 @@ requestData:
   request:
     method: POST
     url: >-
-      ${$env.basePath}/salary/v1/event/${newEventSalaryEventId}/${newShiftId}/${newPlaceId}
+      ${$env.basePath}/salary/v1/event/${newEventSalaryEventId}/place/${newPlaceId}
   headers: []
   disabledInheritedHeaders: []
   params: []
