--- a/tests/e2e/TestMace/Project/v1.0/place editing/Edit place salary/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/place editing/Edit place salary/index.yml
@@ -5,15 +5,15 @@ type: RequestStep
 assignVariables: []
 requestData:
   request:
-    method: POST
+    method: PUT
     url: >-
-      ${$env.basePath}/salary/v1/event/${newEventSalaryEventId}/3fa85f64-5717-4562-b3fc-2c963f66afb6/${newPlaceId}
+      ${$env.basePath}/salary/v1/event/${newEventSalaryEventId}/place/${newPlaceId}
   headers: []
   disabledInheritedHeaders: []
   params: []
   body:
     type: Json
-    jsonBody: "{\r\n  \"count\": ${newPlaceCount},\r\n  \"description\": \"${newPlaceDescription}\"\r\n}"
+    jsonBody: "{\r\n  \"count\": ${editPlaceCount},\r\n  \"description\": \"${editPlaceDescription}\"\r\n}"
     xmlBody: ''
     textBody: ''
     formData: []
@@ -22,4 +22,4 @@ requestData:
   strictSSL: Inherit
 authData:
   type: inherit
-name: Cant add place salary to incorrect shift id
+name: Edit place salary
