Done web app configure option

--- a/tests/e2e/TestMace/Project/v1.0/create event/Test count changed/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/create event/Test count changed/index.yml
@@ -2,7 +2,7 @@ children: []
 variables: {}
 type: Script
 name: Test count changed
-script: |-
+script: |
 
   assert.equal(tm.currentNode.dynamicVars.salaryCount2
              - tm.currentNode.dynamicVars.salaryCount,
