--- a/src/Backend/appsettings.Development.json
+++ b/src/Backend/appsettings.Development.json
@@ -2,12 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "Microsoft": "Warning",
+      "Microsoft": "Debug",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
-    "Postgres": "User ID=postgres;Password=password;Server=127.0.0.1;Port=5432;Database=itlab_salary_develop;Integrated Security=true;",
     "MongoDb": "mongodb://localhost:27017/itlabsalarydevelop2"
-  }
+  },
+  "JwtOptions": {
+    "Authority": "lolkkek"
+  },
+  "TESTS": true
 }
