--- a/src/Backend/appsettings.json
+++ b/src/Backend/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtOptions": {
+    "Audience": "itlab.salary",
+    "DebugKey": "abcdefg123456gfedcba654321",
+    "DebugAdminUserId": "E38C35C2-18DA-4156-9FEA-B8549C736AB5"
+  }
 }
