--- a/src/Backend/appsettings.Development.json
+++ b/src/Backend/appsettings.Development.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "Microsoft": "Debug",
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore.Hosting.Diagnostics": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
