--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,10 @@ stages:
     - checkout: self
       clean: true
       fetchDepth: 1
-
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '3.1'
     - task: DotNetCoreCLI@2
       displayName: dotnet restore
       inputs:
