--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,9 +16,10 @@ stages:
       clean: true
       fetchDepth: 1
     - task: UseDotNet@2
+      displayName: ".NET Core 3.1.x"
       inputs:
         packageType: 'sdk'
-        version: '3.1'
+        version: '3.1.x'
     - task: DotNetCoreCLI@2
       displayName: dotnet restore
       inputs:
