--- a/src/Backend/appsettings.json
+++ b/src/Backend/appsettings.json
@@ -9,7 +9,8 @@
   },
   "AllowedHosts": "*",
   "JwtOptions": {
-    "Audience": "itlab.salary",
+    "Audience": "itlab",
+    "Scope": "itlab.salary",
     "DebugKey": "abcdefg123456gfedcba654321",
     "DebugAdminUserId": "E38C35C2-18DA-4156-9FEA-B8549C736AB5"
   }
