--- a/tests/e2e/TestMace/Project/v1.0/place editing/Check is target place updated/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/place editing/Check is target place updated/index.yml
@@ -5,15 +5,14 @@ type: RequestStep
 assignVariables: []
 requestData:
   request:
-    method: POST
-    url: >-
-      ${$env.basePath}/salary/v1/event/431fcff2-bec2-452e-a68c-17bfcd087f66/shift/${newShiftId}
+    method: GET
+    url: '${$env.basePath}/salary/v1/event/${newEventSalaryEventId}'
   headers: []
   disabledInheritedHeaders: []
   params: []
   body:
     type: Json
-    jsonBody: "{\r\n  \"count\": ${newShiftCount},\r\n  \"description\": \"${newShiftDescription}\"\r\n}"
+    jsonBody: ''
     xmlBody: ''
     textBody: ''
     formData: []
@@ -22,4 +21,4 @@ requestData:
   strictSSL: Inherit
 authData:
   type: inherit
-name: Cant add new shift salary to incorrect event
+name: Check is target place updated
