--- a/tests/e2e/TestMace/Project/v1.0/shift editing/Check is target shift updated/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/shift editing/Check is target shift updated/index.yml
@@ -5,15 +5,14 @@ type: RequestStep
 assignVariables: []
 requestData:
   request:
-    method: PUT
-    url: >-
-      ${$env.basePath}/salary/v1/event/${newEventSalaryEventId}/shift/431fcff2-bec2-452e-a68c-17bfcd087f66
+    method: GET
+    url: '${$env.basePath}/salary/v1/event/${newEventSalaryEventId}'
   headers: []
   disabledInheritedHeaders: []
   params: []
   body:
     type: Json
-    jsonBody: "{\r\n  \"count\": ${editShiftCount},\r\n  \"description\": \"${editShiftDescription}\"\r\n}"
+    jsonBody: ''
     xmlBody: ''
     textBody: ''
     formData: []
@@ -22,4 +21,4 @@ requestData:
   strictSSL: Inherit
 authData:
   type: inherit
-name: Edit shift salary on incorrect shift id
+name: Check is target shift updated
