Add place and shift deleting

--- a/tests/e2e/TestMace/Project/v1.0/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/index.yml
@@ -1,9 +1,10 @@
 children:
-  - Start with empry event salary
+  - Start with empty event salary
   - create event
   - edit event info
   - shift editing
   - place editing
+  - Delete event
 variables:
   newEventSalaryEventId: 431fcff2-bec2-452e-a68c-17bfcd087f65
   newShiftId: 3fa85f64-5717-4562-b3fc-2c963f66afa6
