--- a/tests/e2e/TestMace/Project/v1.0/shift editing/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/shift editing/index.yml
@@ -5,6 +5,7 @@ children:
   - Edit shift salary on incorrect event id
   - Edit shift salary
   - Check is target shift updated
+  - Delete shift salary
 variables:
   editShiftCount: '200'
   editShiftDescription: Edited shift description
