--- a/tests/e2e/TestMace/Project/v1.0/Start with empty event salary/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/Start with empty event salary/index.yml
@@ -6,7 +6,7 @@ assignVariables: []
 requestData:
   request:
     method: GET
-    url: '${$env.basePath}/salary/v1/event/'
+    url: '${$env.basePath}/api/salary/v1/event/'
   headers: []
   disabledInheritedHeaders: []
   params: []
