--- a/tests/e2e/TestMace/Project/v1.0/place editing/Add new place to shift salary/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/place editing/Add new place to shift salary/index.yml
@@ -7,7 +7,7 @@ requestData:
   request:
     method: PUT
     url: >-
-      ${$env.basePath}/salary/v1/event/${newEventSalaryEventId}/place/${newPlaceId}
+      ${$env.basePath}/api/salary/v1/event/${newEventSalaryEventId}/place/${newPlaceId}
   headers: []
   disabledInheritedHeaders: []
   params: []
