--- a/tests/e2e/TestMace/Project/v1.0/create event/Remember events count/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/create event/Remember events count/index.yml
@@ -5,13 +5,13 @@ type: RequestStep
 assignVariables:
   - assign:
       type: reference
-      refNodePath: Project/v1.0/create event
+      refNodePath: ''
     path: body.length
     variable: salaryCount
 requestData:
   request:
     method: GET
-    url: '${$env.basePath}/salary/v1/event/'
+    url: '${$env.basePath}/api/salary/v1/event/'
   headers: []
   disabledInheritedHeaders: []
   params: []
