--- a/tests/e2e/TestMace/Project/v1.0/edit event info/Edit event salary info/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/edit event info/Edit event salary info/index.yml
@@ -6,7 +6,7 @@ assignVariables: []
 requestData:
   request:
     method: PUT
-    url: '${$env.basePath}/salary/v1/event/${newEventSalaryEventId}'
+    url: '${$env.basePath}/api/salary/v1/event/${newEventSalaryEventId}'
   headers: []
   disabledInheritedHeaders: []
   params: []
