--- a/tests/e2e/TestMace/Project/v1.0/shift editing/Edit shift salary/index.yml
+++ b/tests/e2e/TestMace/Project/v1.0/shift editing/Edit shift salary/index.yml
@@ -7,7 +7,7 @@ requestData:
   request:
     method: PUT
     url: >-
-      ${$env.basePath}/salary/v1/event/${newEventSalaryEventId}/shift/${newShiftId}
+      ${$env.basePath}/api/salary/v1/event/${newEventSalaryEventId}/shift/${newShiftId}
   headers: []
   disabledInheritedHeaders: []
   params: []
