--- a/src/Backend/Backend.csproj
+++ b/src/Backend/Backend.csproj
@@ -27,6 +27,11 @@
     <ProjectReference Include="..\Database\Database.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\PublicApi\PublicApi.csproj" />
+    <ProjectReference Include="..\Services\Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\EventSalary\" />
   </ItemGroup>
 
 
