Add support for events api

--- a/src/Backend/appsettings.Development.json
+++ b/src/Backend/appsettings.Development.json
@@ -13,5 +13,11 @@
   "JwtOptions": {
     "Authority": "lolkkek"
   },
-  "TESTS": true
+  "TESTS": true,
+  "EventsServiceType": "FromEventsApi",
+  "RemoteApiEventsServiceOptions": {
+    "ClientSecret": "secret",
+    "TokenUrl": "http://localhost:5001/connect/token",
+    "BaseUrl": "http://localhost:5000/api/event/"
+  }
 }
