--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
+    <PackageReference Include="System.Text.Json" Version="4.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Database\Database.csproj" />
     <ProjectReference Include="..\PublicApi\PublicApi.csproj" />
     <ProjectReference Include="..\Shared\Shared.csproj" />
