Added reports salary api

--- a/src/Backend/Backend.csproj
+++ b/src/Backend/Backend.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Database\Database.csproj" />
+    <ProjectReference Include="..\Mappings\Mappings.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\PublicApi\PublicApi.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
@@ -33,6 +34,15 @@
 
   <ItemGroup>
     <Folder Include="Services\EventSalary\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="appsettings.Secret.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 
