--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Database\Database.csproj" />
+    <ProjectReference Include="..\Mappings\Mappings.csproj" />
     <ProjectReference Include="..\PublicApi\PublicApi.csproj" />
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
