--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -2,6 +2,7 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 
 WORKDIR /app
 
-COPY ITLab-Salary/itlab-salary-build .
+COPY itlab-salary-build .
 
+ENV ASPNETCORE_URLS=http://*:5508
 CMD dotnet Backend.dll
