Added request to reports step for reports ids
Work for #7

--- a/src/Backend/appsettings.Development.json
+++ b/src/Backend/appsettings.Development.json
@@ -8,16 +8,19 @@
     }
   },
   "ConnectionStrings": {
-    "MongoDb": "mongodb://localhost:27017/itlabsalarydevelop2"
+    "MongoDb": "mongodb://localhost:27017/itlab-salary-dev-db"
   },
   "JwtOptions": {
-    "Authority": "lolkkek"
+    "Authority": "http://127.0.0.1.xip.io:5501/"
   },
-  "TESTS": true,
+  "TESTS": false,
   "EventsServiceType": "FromEventsApi",
   "RemoteApiEventsServiceOptions": {
     "ClientSecret": "secret",
     "TokenUrl": "http://localhost:5001/connect/token",
     "BaseUrl": "http://localhost:5000/api/event/"
+  },
+  "RemoteApiReportsServiceOptions": {
+    "BaseUrl": "http://localhost:5500/api/reports/"
   }
 }
